example of output tex file

--- a/AAAAAA_diffurs.tex
+++ b/AAAAAA_diffurs.tex
@@ -22,64 +22,66 @@
 Получим следующий результат:\newline\newline
 \[f(x) = \sin( x ^{ 3 })+(\cos( x ))^{ 2 }\]\newline
 Найдем значение функции в точке 5.00 знаменитым в 17 веке методом буль-буль\newline\[f(a) = -0.54, где a = 5.00\]\newlineНайдем производную 2 порядка этой функции методом Шварцвальда III\newline
-Тогда так\newline
+Будем считать верным, что\newline
 \[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[(\cos( x ))' = \sin( x )\times -1 \times 1 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[((\cos( x ))^{ 2 })' = \cos( x )\times\sin( x )\times -1 \times 2 \]\newline
-Тогда так\newline
-\[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[( x ^{ 3 })' =  x ^{ 2 }\times 3 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[(\sin( x ^{ 3 }))' = \cos( x ^{ 3 })\times x ^{ 2 }\times 3 \]\newline
-Тогда так\newline
-\[(\sin( x ^{ 3 })+(\cos( x ))^{ 2 })' = \cos( x ^{ 3 })\times x ^{ 2 }\times 3 +\cos( x )\times\sin( x )\times -1 \times 2 \]\newline
-Тогда так\newline
-\[( 2 )' =  0 \]\newline
-Тогда так\newline
-\[( -1 )' =  0 \]\newline
-Тогда так\newline
-\[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[(\sin( x ))' = \cos( x )\times 1 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[(\sin( x )\times -1 )' = \cos( x )\times -1 + 0 \]\newline
-Тогда так\newline
-\[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[(\cos( x ))' = \sin( x )\times -1 \times 1 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[(\cos( x )\times\sin( x )\times -1 )' = \sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 \]\newline
-Тогда так\newline
-\[(\cos( x )\times\sin( x )\times -1 \times 2 )' =  A_{1} + 0 \]\newline
-где:\[A_{1} = (\sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 )\times 2 \]\newline
-Тогда так\newline
-\[( 3 )' =  0 \]\newline
-Тогда так\newline
-\[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[( x ^{ 2 })' =  x \times 2 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[( x ^{ 2 }\times 3 )' =  x \times 2 \times 3 + 0 \]\newline
-Тогда так\newline
-\[( x )' =  1 \]\newline
-Читатель, в качестве упражнения, может проверить, что\newline
-\[( x ^{ 3 })' =  x ^{ 2 }\times 3 \]\newline
-В СССР следующий результат было стыдно записывать\newline
-\[(\cos( x ^{ 3 }))' = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \]\newline
-Тогда так\newline
-\[(\cos( x ^{ 3 })\times x ^{ 2 }\times 3 )' =  A_{2} +\cos( x ^{ 3 })\times x \times 2 \times 3 \]\newline
-где:\[A_{2} = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \times x ^{ 2 }\times 3 \]\newline
 Получен важнейший результат\newline
+\[(\cos( x ))' = \sin( x )\times -1 \times 1 \]\newline
+А тут так\newline
+\[((\cos( x ))^{ 2 })' = \cos( x )\times\sin( x )\times -1 \times 2 \]\newline
+Будем считать верным, что\newline
+\[( x )' =  1 \]\newline
+Получен важнейший результат\newline
+\[( x ^{ 3 })' =  x ^{ 2 }\times 3 \]\newline
+А тут так\newline
+\[(\sin( x ^{ 3 }))' = \cos( x ^{ 3 })\times x ^{ 2 }\times 3 \]\newline
+Получен важнейший результат\newline
+\[(\sin( x ^{ 3 })+(\cos( x ))^{ 2 })' = \cos( x ^{ 3 })\times x ^{ 2 }\times 3 +\cos( x )\times\sin( x )\times -1 \times 2 \]\newline
+Будем считать верным, что\newline
+\[( 2 )' =  0 \]\newline
+Будем считать верным, что\newline
+\[( -1 )' =  0 \]\newline
+Будем считать верным, что\newline
+\[( x )' =  1 \]\newline
+Получен важнейший результат\newline
+\[(\sin( x ))' = \cos( x )\times 1 \]\newline
+А тут так\newline
+\[(\sin( x )\times -1 )' = \cos( x )\times -1 + 0 \]\newline
+Будем считать верным, что\newline
+\[( x )' =  1 \]\newline
+Получен важнейший результат\newline
+\[(\cos( x ))' = \sin( x )\times -1 \times 1 \]\newline
+А тут так\newline
+\[(\cos( x )\times\sin( x )\times -1 )' = \sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 \]\newline
+Получен важнейший результат\newline
+\[(\cos( x )\times\sin( x )\times -1 \times 2 )' =  A_{1} + 0 \]\newline
+где:\[A_{1} = (\sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 )\times 2 \]
+Будем считать верным, что\newline
+\[( 3 )' =  0 \]\newline
+Будем считать верным, что\newline
+\[( x )' =  1 \]\newline
+Получен важнейший результат\newline
+\[( x ^{ 2 })' =  x \times 2 \]\newline
+А тут так\newline
+\[( x ^{ 2 }\times 3 )' =  x \times 2 \times 3 + 0 \]\newline
+Будем считать верным, что\newline
+\[( x )' =  1 \]\newline
+Получен важнейший результат\newline
+\[( x ^{ 3 })' =  x ^{ 2 }\times 3 \]\newline
+А тут так\newline
+\[(\cos( x ^{ 3 }))' = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \]\newline
+Получен важнейший результат\newline
+\[(\cos( x ^{ 3 })\times x ^{ 2 }\times 3 )' =  A_{2} +\cos( x ^{ 3 })\times x \times 2 \times 3 \]\newline
+где:\[A_{2} = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \times x ^{ 2 }\times 3 \]
+Более содержительным является следующий результат\newline
 \[(\cos( x ^{ 3 })\times x ^{ 2 }\times 3 +\cos( x )\times\sin( x )\times -1 \times 2 )' =  A_{3} + A_{4} \]\newline
-где:\[A_{3} = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \times x ^{ 2 }\times 3 +\cos( x ^{ 3 })\times x \times 2 \times 3 \]\newline
-\[A_{4} = (\sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 )\times 2 \]\newline
+где:\[A_{3} = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \times x ^{ 2 }\times 3 +\cos( x ^{ 3 })\times x \times 2 \times 3 \]
+\[A_{4} = (\sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 )\times 2 \]
 Для простоты запишем этот результат так:\newline
 \[f^{(2)}(x) =  A_{5} + A_{6} \]\newline
+где:\[A_{5} = \sin( x ^{ 3 })\times -1 \times x ^{ 2 }\times 3 \times x ^{ 2 }\times 3 +\cos( x ^{ 3 })\times x \times 2 \times 3 \]
+\[A_{6} = (\sin( x )\times -1 \times\sin( x )\times -1 +\cos( x )\times\cos( x )\times -1 )\times 2 \]
 Разложим функцию (по Тейлору) до $o(x^{1})$ в точке а = 1.00\newline
-\[f(a) =  1.13 + 0.71 \times( x - 1 )\]\newlinne
+\[f(a) =  1.13 + 0.71 \times( x - 1 )\]\newline
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\linewidth]{func.png}
